--- a/en/index.html
+++ b/en/index.html
@@ -24,7 +24,7 @@
 <meta content="bin, Hong Kong" property="og:title">
 <meta content="Pioneers of the Bitcoin ATM" property="og:description">
 <meta property="og:site_name">
-<script src="//www.google-analytics.com/analytics.js" async=""></script><script src="../bin/bin/analytics.js" async=""></script><script type="application/ld+json">{ "@context": "http://schema.org", "@type": "WebSite", "url": "https://bin.org/", "potentialAction": { "@type": "SearchAction", "target": "", "query-input": "required name=search_term" } }</script>
+<script src="//www.google-analytics.com/analytics.js" async=""></script><script src="../bin/bin/analytics.js" async=""></script><script type="application/ld+json">{ "@context": "http://schema.org", "@type": "WebSite", "url": "http://bitmac.org/", "potentialAction": { "@type": "SearchAction", "target": "", "query-input": "required name=search_term" } }</script>
 <!-- / Yoast WordPress SEO plugin. -->
 
 <!--[if lte IE 8]>
@@ -35,14 +35,6 @@
     <!--<![endif]-->
 <script src="../bin/bin/modernizr-custom.js" type="text/javascript"></script>
 <script src="../bin/bin/jquery.min.js" type="text/javascript"></script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-60739838-1', 'auto');
-    ga('send', 'pageview');
-  </script>
 <script src="../bin/bin/scripts.min.js" type="text/javascript" charset="utf-8" async="" data-requiremodule="scripts.min" data-requirecontext="_"></script><script src="../bin/bin/fresco.js" type="text/javascript" charset="utf-8" async="" data-requiremodule="vendor/fresco" data-requirecontext="_"></script>
   <div class="fr-window fr-window-fresco" style="display: none;"><div class="fr-bubble" style="display: none;"><div class="fr-frames fr-frames-landscape"><div class="fr-frames-move"></div></div><div class="fr-thumbnails" style="display: none;"><div class="fr-thumbnails-wrapper"><div class="fr-thumbnails-slider"><div class="fr-thumbnails-side fr-thumbnails-side-previous"><div class="fr-thumbnails-side-button"><div class="fr-thumbnails-side-button-background"></div><div class="fr-thumbnails-side-button-icon"></div></div></div><div class="fr-thumbnails-thumbs"><div class="fr-thumbnails-slide"></div></div><div class="fr-thumbnails-side fr-thumbnails-side-next"><div class="fr-thumbnails-side-button"><div class="fr-thumbnails-side-button-background"></div><div class="fr-thumbnails-side-button-icon"></div></div></div></div></div></div></div></div><div class="fr-overlay fr-overlay-fresco" style="display: none;"><div class="fr-overlay-background"></div></div>
           <header class="header header--hero header--home" id="js-header" role="banner">
