--- a/en/index.html
+++ b/en/index.html
@@ -1,154 +1,39 @@
-<html class="js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths json no-android cssvhunit cssvwunit js-ready normal-vh js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage no-websqldatabase hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients no-cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio no-localstorage no-sessionstorage webworkers applicationcache svg inlinesvg no-smil svgclippaths json cssvhunit cssvwunit" lang="en-US" style="" prefix="og: http://ogp.me/ns#"><div style="left: 0px; width: 100%; position: absolute;"></div><head><script src="../bin/bin/scripts.min.js" type="text/javascript" charset="utf-8" async="" data-requiremodule="scripts.min" data-requirecontext="_"></script><script src="../bin/bin/vendor/fresco.js" type="text/javascript" charset="utf-8" async="" data-requiremodule="vendor/fresco" data-requirecontext="_"></script></head><body class=" " data-content-url="https://bitmac.org/content" data-home-url="https://bitmac.org/wordpress" data-checkout-url="https://bitmac.org/checkout/" data-cart-url="https://bitmac.org/order/"><div style="position: absolute; left: 0px; width: 100%;"></div><!--<![endif]--><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <title>BitMac, Hong Kong</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.3">
-  <meta name="msapplication-TileColor" content="#37e8d7">
-  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-    <style>
-          @media (max-width: 799px) {
-        .hero {
-          background-image: url('../bin/bin/home-basic.jpg');
-        }
-      }
-      @media (min-width: 800px) {
-        .hero {
-          background-image: url('../bin/bin/home.jpg');
-        }
-      }
-      </style>
-    
-<!-- This site is optimized with the Yoast WordPress SEO plugin v1.6.1 - https://yoast.com/wordpress/plugins/seo/ -->
-<meta name="description" content="Pioneers of the Bitcoin ATM">
-<meta content="en_US" property="og:locale">
-<meta content="website" property="og:type">
-<meta content="bin, Hong Kong" property="og:title">
-<meta content="Pioneers of the Bitcoin ATM" property="og:description">
-<meta property="og:site_name">
-<script src="//www.google-analytics.com/analytics.js" async=""></script><script src="../bin/bin/analytics.js" async=""></script><script type="application/ld+json">{ "@context": "http://schema.org", "@type": "WebSite", "url": "http://bitmac.org/", "potentialAction": { "@type": "SearchAction", "target": "", "query-input": "required name=search_term" } }</script>
-<!-- / Yoast WordPress SEO plugin. -->
+<!DOCTYPE html>
+<html>
+<head>
+<title>BitMac., Hong Kong</title>
+<style>
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  .fit { /* set relative picture size */
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .center {
+    display: block;
+    margin: auto;
+  }
+</style>
 
-<!--[if lte IE 8]>
-  <link href="/content/themes/bitmac/assets/css/old-ie.min.css?e10bd2" rel="stylesheet">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-  <link href="../bin/bin/styles.min.css" rel="stylesheet">
-    <!--<![endif]-->
-<script src="../bin/bin/modernizr-custom.js" type="text/javascript"></script>
-<script src="../bin/bin/jquery.min.js" type="text/javascript"></script>
-<script src="../bin/bin/scripts.min.js" type="text/javascript" charset="utf-8" async="" data-requiremodule="scripts.min" data-requirecontext="_"></script><script src="../bin/bin/fresco.js" type="text/javascript" charset="utf-8" async="" data-requiremodule="vendor/fresco" data-requirecontext="_"></script>
-  <div class="fr-window fr-window-fresco" style="display: none;"><div class="fr-bubble" style="display: none;"><div class="fr-frames fr-frames-landscape"><div class="fr-frames-move"></div></div><div class="fr-thumbnails" style="display: none;"><div class="fr-thumbnails-wrapper"><div class="fr-thumbnails-slider"><div class="fr-thumbnails-side fr-thumbnails-side-previous"><div class="fr-thumbnails-side-button"><div class="fr-thumbnails-side-button-background"></div><div class="fr-thumbnails-side-button-icon"></div></div></div><div class="fr-thumbnails-thumbs"><div class="fr-thumbnails-slide"></div></div><div class="fr-thumbnails-side fr-thumbnails-side-next"><div class="fr-thumbnails-side-button"><div class="fr-thumbnails-side-button-background"></div><div class="fr-thumbnails-side-button-icon"></div></div></div></div></div></div></div></div><div class="fr-overlay fr-overlay-fresco" style="display: none;"><div class="fr-overlay-background"></div></div>
-          <header class="header header--hero header--home" id="js-header" role="banner">
-  <div class="container container--flush">
-    <div class="relative">
-      <div class="js-toggle-nav cf copy-size">
-        <div class="copy-size__fix-size--1050">
-          <nav class="navigation" role="navigation">
-		</nav>
-          <div class="header__cta">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</header>      <div role="document">
-        <div id="js-hero">
-  <div class="hero viewport-h hero--home">
-          <div class="vcenter">
-        <div class="vcenter__wrap">
-          <div class="vcenter__inner">
-            <div class="container">
-              <div class="copy-style">
-                <h1 class="text--invert--force hero__header">
-                  Getting Bitcoin can't be easier.                </h1>
-                                  <div class="copy-size">
-                    <div class="copy-size__fix-size--1050">                    </div>
-                  </div>
-                              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      </div>
-</div>        <main class="main " role="main">
-          <div class="template template--home">
-  
-  
-    <div class="block--xlarge   module--image-text group">
-    <section class="content--image-text">
-      <div class="container">
-              </div>
-              <div class="waypoint" data-offset="90">
-    <div class="container container--medium">
-  
-  <article class="content--usp">
-    <div class="flag flag--usp flag--standard">
-              <div class="flag__aside">
-          <div class="flag__aside__content fade-horizontal fade-horizontal--right">
-                          <img class="centered" alt="altcoins" src="../bin/bin/panel.png">                      </div>
-        </div>
-        <div class="flag__body">
-          <div class="flag__body__content fade-horizontal fade-horizontal--left">
-            <div class="copy-style copy-size copy-baseline">
-              <div class="ll--small flush-last-child">
-                <h2 class="h2 baseline--half col--brand" style="color:#325d81;">
-                                  Multi-crypto support now available!                                </h2>
-                <p class="p1"><span class="s1">Cash to Bitcoin, Bitcoin Cash, Ethereum, Zcash, Litecoin or Dash in no time. You have options right away!</span></p>
-<p class="p1"><span class="s1">Ethereum 15 second confirmation time makes the cryptocurrency ideal for cash-out transactions.&nbsp;</span></p>
-              </div>
-            </div>
-          </div>
-        </div>  
-          </div>
-  </article>
-  </div>
-  </div>
-          </section>
-  </div>
-  
-  
-    <div class="block--xlarge   bg--comp-alt theme--comp module--image-text group">
-    <section class="content--image-text">
-      <div class="container">
-              </div>
-              <div class="waypoint" data-offset="90">
-    <div class="container container--medium">
-  
-  <article class="content--usp">
-    <div class="flag flag--usp flag--switch">
-              <div class="flag__aside">
-          <div class="flag__aside__content fade-horizontal fade-horizontal--right">
-            <div class="copy-style copy-size copy-baseline">
-              <div class="ll--small flush-last-child">
-                <h2 class="h2 baseline--half col--brand" style="color:#2eb8b8;">
-                                  Available and accessiable!                                </h2>
-                <p>The most convenient way to buy and sell Bitcoin and alcoins. Extremely easy to use!</p>
+</head>
+<body bgcolor=black>
 
-<p>Accroding to the statistics from our major service provider, prime locations are reporting monthly transactions volumes from $70K to as high as $300K, standard locations about $20K to $30K. </p>
-					</div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="flag__body">
-                        <div class="flag__body__content fade-horizontal fade-horizontal--left">
-                          <img class="centered" alt="" src="../bin/bin/usp-shop.png">
-                        </div>
-                      </div>
-                    </div>
-                  </article>
-                </div>
-              </div>
+<img class="center fit" src="../bin/bin/banner.jpg" >    
 
+<script src="../bin/bin/jquery.js"></script>
+<script type="text/javascript" language="JavaScript">
 
-      <div class="copy-size__fix-size--1050">
-                <ul class="footer-smallprint nav nav--inline nav--gapped text--center col--comp--lite links--comp--lite links--ui-invert">
-          <li class="footer-smallprint__item--copyright">
-            <small>&copy; 2018 BitMac, Hong Kong.</small>
-          </li>
+  function set_body_height() { // set body height = window height
+    $('body').height($(window).height());
+  }
+  $(document).ready(function() {
+    $(window).bind('resize', set_body_height);
+    set_body_height();
+  });
 
-        </ul>
-      </div>
+</script>
 
-
-            </section>    <script src="../bin/bin/require.min.js" data-main="../bin/bin/scripts.min.js"></script>
-    <span id="js-content-mask"></span>
-</body></html>
+</body>
+</html>
