--- a/en/index.html
+++ b/en/index.html
@@ -1,39 +1,58 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" class="no-js">
 <head>
-<title>BitMac., Hong Kong</title>
-<style>
-  * {
-    padding: 0;
-    margin: 0;
-  }
-  .fit { /* set relative picture size */
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .center {
-    display: block;
-    margin: auto;
-  }
-</style>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300|Merriweather' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="../bin/css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="../bin/css/style.css"> <!-- Resource style -->
+	<script src="../bin/js/modernizr.js"></script> <!-- Modernizr -->
+  	
+	<title>BitMac, Hong Kong</title>
 </head>
-<body bgcolor=black>
+<body>
+	<header class="cd-header" data-type="slider-item">
+		<h1>The future is NOW !<br>
+		<font size=1>&copy; 2018 BitMac, Hong Kong.</font></h1>
+	</header>
+	
+	<section class="cd-fixed-background img-1" data-type="slider-item">
+		<div class="cd-content">
+			<h2>The Era of DIGITAL CASH</h2>
+			<p>In the era of the digital world, the monetary system is constantly changing, and things what has been popular recently is being replaced by improved payment systems. Innovations are often aggressively reacted by conservatives, as it always was. Many members of large monetary systems are not very flattering about any payment aggregators that are associated with the cryptocurrency. Some of them argue that untimely innovation should be simply ignored, because there are enough currencies in the world, and there is no need to invent something new. Against this background, as a response to bitcoin and other cryptocurrencies existing monetary systems are working on their own developments and improvements in technology.</p>
+		</div>
+	</section>
 
-<img class="center fit" src="../bin/bin/banner.jpg" >    
+	<section class="cd-fixed-background img-2" data-type="slider-item">
+		<div class="cd-content light-background">
+			<h2>The future of blockchain</h2>
+			<p>The future of finance could be dominated by blockchain technologies. A traceable global currency complete with an efficient infrastructure will not only result in massive cost reduction for all market participants, it will change global banking. Cryptocurrency will do for payments what email did for communication.</p>
+		</div>
+	</section>
 
-<script src="../bin/bin/jquery.js"></script>
-<script type="text/javascript" language="JavaScript">
+	<section class="cd-fixed-background img-3" data-type="slider-item">
+		<div class="cd-content">
+			<h2>More than just Digital Money</h2>
+			<p>In 2008, Satoshi Nakamoto, a pseudonym, published his white paper about Bitcoin, a peer-to-peer electronic cash system. Nakamoto wanted to create a decentralized, digital currency to compete against fiat currencies. Of far more significance, the mechanics behind Bitcoin were to change the way early adopters started thinking about decentralization and decentralized business models in general. As email was to the web, bitcoin became the first widely known app built on blockchain, and there are already many more such examples including Vitalik Buterin's Ethereum amongst many other blockchains, both public and private.</p>
+		</div>
+	</section>
 
-  function set_body_height() { // set body height = window height
-    $('body').height($(window).height());
-  }
-  $(document).ready(function() {
-    $(window).bind('resize', set_body_height);
-    set_body_height();
-  });
+	<section class="cd-fixed-background img-4" data-type="slider-item">
+		<div class="cd-content">
+			<h2>Let's begin here</h2>
+			<p>Blockchain is a decentralized, openly shared and distributed digital ledger technology. It achieves this in a cheap, efficient, and very secure way whilst removing the need either for an intermediary or a central authority. The key qualities of this network are that it is fully transparent, it is time-stamped and therefore auditable, it is decentralized and it is secured through cryptography. Using advanced cryptographic functions, blockchains provide a decentralized and safe database of any transaction involving value. Each transaction between two parties creates a record on a digitally distributed ledger of which the authenticity can be verified by the entire community, meaning that everyone works together to create a network instead of its being defined by a single person or company. Let's begin here!</p>
+		</div>
+	</section>
 
-</script>
-
+	<nav>
+		<ul class="cd-vertical-nav">
+			<li><a href="#0" class="cd-prev inactive">Next</a></li>
+			<li><a href="#0" class="cd-next">Prev</a></li>
+		</ul> <!-- cd-vertical-nav -->
+	</nav> 
+<script src="../bin/js/jquery.js"></script>
+<script src="../bin/js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
