--- a/en/index.html
+++ b/en/index.html
@@ -28,7 +28,7 @@
 	<section class="cd-fixed-background img-2" data-type="slider-item">
 		<div class="cd-content light-background">
 			<h2>The future of blockchain</h2>
-			<p>The future of finance could be dominated by blockchain technologies. A traceable global currency complete with an efficient infrastructure will not only result in massive cost reduction for all market participants, it will change global banking. Cryptocurrency will do for payments what email did for communication.</p>
+			<p>Blockchain is undeniably one of the hottest new technologies to hit the business world, and companies are racing to learn more about it and how they can apply it to their business. While some dismiss blockchain as the latest consumer buzzword, many liken the decentralized ledger technology to the dawn of the internet, when consumers and technologists were both equally excited about the fascinating new technologies, but things were still too new to be sure about practical uses in our everyday. Some people would say the future of finance could be dominated by blockchain technologies. A traceable global currency complete with an efficient infrastructure will not only result in massive cost reduction for all market participants, it will change global banking. Cryptocurrency will do for payments what email did for communication.</p>
 		</div>
 	</section>
 
@@ -42,7 +42,7 @@
 	<section class="cd-fixed-background img-4" data-type="slider-item">
 		<div class="cd-content">
 			<h2>Let's begin here</h2>
-			<p>Blockchain is a decentralized, openly shared and distributed digital ledger technology. It achieves this in a cheap, efficient, and very secure way whilst removing the need either for an intermediary or a central authority. The key qualities of this network are that it is fully transparent, it is time-stamped and therefore auditable, it is decentralized and it is secured through cryptography. Using advanced cryptographic functions, blockchains provide a decentralized and safe database of any transaction involving value. Each transaction between two parties creates a record on a digitally distributed ledger of which the authenticity can be verified by the entire community, meaning that everyone works together to create a network instead of its being defined by a single person or company. Let's begin here!</p>
+			<p>Blockchain is a decentralized, openly shared and distributed digital ledger technology. It achieves this in a cheap, efficient, and very secure way whilst removing the need either for an intermediary or a central authority. The key qualities of this network are that it is fully transparent, it is time-stamped and therefore auditable, it is decentralized and it is secured through cryptography. Using advanced cryptographic functions, blockchains provide a decentralized and safe database of any transaction involving value. Each transaction between two parties creates a record on a digitally distributed ledger of which the authenticity can be verified by the entire community, meaning that everyone works together to create a network instead of its being defined by a single person or company. Okay, it's too much on that... Why not try? Let's begin here!</p>
 		</div>
 	</section>
 
