--- a/en/index.html
+++ b/en/index.html
@@ -1,56 +1,65 @@
-<!doctype html>
-<html lang="en" class="no-js">
+<!DOCTYPE html>
+<html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="stylesheet" href="../bin/css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="../bin/css/style.css"> <!-- Resource style -->
-	<script src="../bin/js/modernizr.js"></script> <!-- Modernizr -->
-  	
 	<title>BitMac, Hong Kong</title>
+	<link rel="stylesheet" href="../bin/js/jquery.mobile.css">
+	<script src="../bin/js/jquery.js"></script>
+	<script src="../bin/js/jquery.mobile.js"></script>
+	<script>
+		$( document ).on( "pagecreate", function() {
+			$( "#theme-selector input" ).on( "change", function( event ) {
+				var themeClass = $( "#theme-selector input:checked" ).attr( "id" );
+				$( "#testpage" ).removeClass( "ui-page-theme-a ui-page-theme-b" ).addClass( "ui-page-theme-" + themeClass );
+				$( "#ui-body-test" ).removeClass( "ui-body-a ui-body-b" ).addClass( "ui-body-" + themeClass );
+				$( "#ui-bar-test, #ui-bar-form" ).removeClass( "ui-bar-a ui-bar-b" ).addClass( "ui-bar-" + themeClass );
+				$( ".ui-collapsible-content" ).removeClass( "ui-body-a ui-body-b" ).addClass( "ui-body-" + themeClass );
+				$( ".theme" ).text( themeClass );
+			});
+		});
+	</script>
 </head>
 <body>
-	<header class="cd-header" data-type="slider-item">
-		<h1>The future is NOW !<br>
-		<font size=1>&copy; 2018 BitMac, Hong Kong.</font></h1>
-	</header>
-	
-	<section class="cd-fixed-background img-1" data-type="slider-item">
-		<div class="cd-content">
-			<h2>The Era of DIGITAL CASH</h2>
-			<p>In the era of the digital world, the monetary system is constantly changing, and things what has been popular recently is being replaced by improved payment systems. Innovations are often aggressively reacted by conservatives, as it always was. Many members of large monetary systems are not very flattering about any payment aggregators that are associated with the cryptocurrency. Some of them argue that untimely innovation should be simply ignored, because there are enough currencies in the world, and there is no need to invent something new. Against this background, as a response to bitcoin and other cryptocurrencies existing monetary systems are working on their own developments and improvements in technology.</p>
-		</div>
-	</section>
 
-	<section class="cd-fixed-background img-2" data-type="slider-item">
-		<div class="cd-content light-background">
-			<h2>The future of blockchain</h2>
-			<p>Blockchain is undeniably one of the hottest new technologies to hit the business world, and companies are racing to learn more about it and how they can apply it to their business. While some dismiss blockchain as the latest consumer buzzword, many liken the decentralized ledger technology to the dawn of the internet, when consumers and technologists were both equally excited about the fascinating new technologies, but things were still too new to be sure about practical uses in our everyday. Some people would say the future of finance could be dominated by blockchain technologies. A traceable global currency complete with an efficient infrastructure will not only result in massive cost reduction for all market participants, it will change global banking. Cryptocurrency will do for payments what email did for communication.</p>
-		</div>
-	</section>
+<div data-role="page" id="testpage">
 
-	<section class="cd-fixed-background img-3" data-type="slider-item">
-		<div class="cd-content">
-			<h2>More than just Digital Money</h2>
-			<p>In 2008, Satoshi Nakamoto, a pseudonym, published his white paper about Bitcoin, a peer-to-peer electronic cash system. Nakamoto wanted to create a decentralized, digital currency to compete against fiat currencies. Of far more significance, the mechanics behind Bitcoin were to change the way early adopters started thinking about decentralization and decentralized business models in general. As email was to the web, bitcoin became the first widely known app built on blockchain, and there are already many more such examples including Vitalik Buterin's Ethereum amongst many other blockchains, both public and private.</p>
-		</div>
-	</section>
+	<div data-role="header">
+		<h1>BitMac, Hong Kong.</h1>
+    		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
+	</div>
 
-	<section class="cd-fixed-background img-4" data-type="slider-item">
-		<div class="cd-content">
-			<h2>Let's begin here</h2>
-			<p>Blockchain is a decentralized, openly shared and distributed digital ledger technology. It achieves this in a cheap, efficient, and very secure way whilst removing the need either for an intermediary or a central authority. The key qualities of this network are that it is fully transparent, it is time-stamped and therefore auditable, it is decentralized and it is secured through cryptography. Using advanced cryptographic functions, blockchains provide a decentralized and safe database of any transaction involving value. Each transaction between two parties creates a record on a digitally distributed ledger of which the authenticity can be verified by the entire community, meaning that everyone works together to create a network instead of its being defined by a single person or company. Okay, it's too much on that... Why not try? Let's begin here!</p>
-		</div>
-	</section>
+	<div class="ui-content" role="main">
 
-	<nav>
-		<ul class="cd-vertical-nav">
-			<li><a href="#0" class="cd-prev inactive">Next</a></li>
-			<li><a href="#0" class="cd-next">Prev</a></li>
-		</ul> <!-- cd-vertical-nav -->
-	</nav> 
-<script src="../bin/js/jquery.js"></script>
-<script src="../bin/js/main.js"></script> <!-- Resource jQuery -->
+		<a href="#panel-push" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-mini ui-btn-icon-left ui-icon-bars">Push</a>
+        
+        <form class="ui-mini">
+			<div class="ui-field-contain" id="theme-selector">
+				<fieldset data-role="controlgroup" data-type="horizontal">
+					<label for="a">Light</label>
+					<input type="radio" name="theme" id="a" checked>
+					<label for="b">Black</label>
+					<input type="radio" name="theme" id="b">
+				</fieldset>
+			</div>
+		</form>
+        
+
+		<p>The Era of Digital Cash!</p>
+
+
+	</div>
+
+
+	<div data-role="panel" id="panel-push" data-display="push">
+		<ul data-role="listview">
+			<li data-icon="delete"><a href="#" data-rel="close">Close</a></li>
+			<li data-icon="home"><a href="about.html" data-rel="dialog" data-transition="flip">About BitMac</a></li>
+			<li data-icon="location"><a href="location.html" data-rel="dialog" data-transition="flip">Locate our Machine</a></li>
+		</ul>
+	</div>
+
+</div>
+
 </body>
 </html>
