--- a/en/index.html
+++ b/en/index.html
@@ -25,7 +25,7 @@
 <div data-role="page" id="testpage">
 
 	<div data-role="header">
-		<h1>BitMac, Hong Kong.</h1>
+		<h1>BitMac</h1>
     		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
 	</div>
 
@@ -47,7 +47,6 @@
 
 		<img src="../bin/img/dash.svg" width="35" height="35">
 		<p>The Era of Digital Cash!</p>
-
 
 	</div>
 
