--- a/en/location.html
+++ b/en/location.html
@@ -13,8 +13,8 @@
 	<div data-role="page" id="dialog-success" data-dom-cache="true">
 
 		<div data-role="header" data-theme="b">
-			<h1>Dialog</h1>
-		</div><!-- /header -->
+			<h1>Find my Machine</h1>
+		</div>
 
 		<div class="ui-content" role="main">
 
