--- a/en/about.html
+++ b/en/about.html
@@ -14,7 +14,7 @@
 
 		<div data-role="header" data-theme="b">
 			<h1>About Us</h1>
-		</div><!-- /header -->
+		</div>
 
 		<div class="ui-content" role="main">
 			
