--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BitMac, Hong Kong</title>
-	<script src="../bin/js/currency.js"></script>
-	<link rel="stylesheet" href="../bin/js/jquery.mobile.css">
-	<script src="../bin/js/jquery.js"></script>
-	<script src="../bin/js/jquery.mobile.js"></script>
+	<script src="js/currency.js"></script>
+	<link rel="stylesheet" href="js/jquery.mobile.css">
+	<script src="js/jquery.js"></script>
+	<script src="js/jquery.mobile.js"></script>
 
 	<script>
 		$( document ).on( "pagecreate", function() {
