--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BitMac, Hong Kong</title>
-	<script src="js/currency.js"></script>
+	<script src="js/ticker.js"></script>
 	<script src="js/jquery.js"></script>
 	<link rel="stylesheet" href="js/jquery.mobile.css">
 	<script src="js/jquery.mobile.js"></script>
