--- a/index.html
+++ b/index.html
@@ -48,16 +48,15 @@
 
 		<p>The Era of Digital Cash!</p>
 
-	<table width="25%">
+	<table width="20%">
 		<tr>
 			<td>
-				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD"></div>
 			</td>
 		</tr>
 	</table>
 
 	</div>
-
 
 	<div data-role="panel" id="panel-push" data-display="push">
 		<ul data-role="listview">
