--- a/en/index.html
+++ b/en/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BitMac, Hong Kong</title>
-	<script src="../bin/js/currency.js"></script>
-	<link rel="stylesheet" href="../bin/js/jquery.mobile.css">
-	<script src="../bin/js/jquery.js"></script>
-	<script src="../bin/js/jquery.mobile.js"></script>
+	<script src="js/ticker.js"></script>
+	<script src="js/jquery.js"></script>
+	<link rel="stylesheet" href="js/jquery.mobile.css">
+	<script src="js/jquery.mobile.js"></script>
 
 	<script>
 		$( document ).on( "pagecreate", function() {
@@ -45,30 +45,18 @@
 				</fieldset>
 			</div>
 		</form>
-        
+
 		<p>The Era of Digital Cash!</p>
 
-	<table align="center" width="50%">
+	<table width="20%">
 		<tr>
 			<td>
-				<div class="coinmarketcap-currency-widget" data-currencyid="1" data-base="HKD" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-			</td>
-			<td>
-				<div class="coinmarketcap-currency-widget" data-currencyid="1027" data-base="HKD" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-			</td>
-		</tr>
-		<tr>
-			<td>
-				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
-			</td>
-			<td>
-				<div class="coinmarketcap-currency-widget" data-currencyid="1437" data-base="HKD" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
+				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD"></div>
 			</td>
 		</tr>
 	</table>
 
 	</div>
-
 
 	<div data-role="panel" id="panel-push" data-display="push">
 		<ul data-role="listview">
