--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 		<ul data-role="listview">
 			<li data-icon="delete"><a href="#" data-rel="close">Close</a></li>
 			<li data-icon="home"><a href="about.html" data-rel="dialog" data-transition="flip">About BitMac</a></li>
+			<li data-icon="carat-r"><a href="btc.html" data-rel="dialog" data-transition="flip">Bitcoin</a></li>
+			<li data-icon="carat-r"><a href="dash.html" data-rel="dialog" data-transition="flip">Dash</a></li>
 			<li data-icon="location"><a href="location.html" data-rel="dialog" data-transition="flip">Locate our Machine</a></li>
 		</ul>
 	</div>
