--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="js/ticker.js"></script>
 	<script src="js/jquery.js"></script>
-	<link rel="stylesheet" href="js/jquery.mobile.css">
-	<script src="js/jquery.mobile.js"></script>
+	<link rel="stylesheet" href="js/mobile.css">
+	<script src="js/mobile.js"></script>
 	<script src="js/page.js"></script>
 	<link rel="stylesheet" href="js/frame.css">
 </head>
@@ -37,7 +37,6 @@
 
 		<p>The Era of Digital Cash!</p>
 
-
 	<table width="20%" id="rcorners1">
 		<tr>
 			<td colspan="2">
@@ -50,7 +49,6 @@
 		</tr>
 
 	</table>
-
 
 	</div>
 
