--- a/location.html
+++ b/location.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>BitMac, Hong Kong</title>
-	<link rel="stylesheet" href="js/jquery.mobile.css">
+	<link rel="stylesheet" href="js/mobile.css">
 	<script src="js/jquery.js"></script>
-	<script src="js/jquery.mobile.js"></script>
+	<script src="js/mobile.js"></script>
 </head>
 <body>
 
