--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 			</div>
 		</form>
 
-		<p>The Era of Digital Cash!</p>
+		<p>The Era of Digital Payment!</p>
 
 	<table width="20%" id="rcorners1">
 		<tr>
 			<td colspan="2">
-				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD"></div>
+				<div class="coinmarketcap-currency-widget" data-currencyid="1" data-base="HKD" data-secondary="USD"></div>
 			</td>
 		</tr>
 		<tr>
