--- a/index.html
+++ b/index.html
@@ -1,66 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>BitMac, Hong Kong</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="js/ticker.js"></script>
-	<script src="js/jquery.js"></script>
-	<link rel="stylesheet" href="js/mobile.css">
-	<script src="js/mobile.js"></script>
-	<script src="js/page.js"></script>
-	<link rel="stylesheet" href="js/frame.css">
+<title>BitMac, Hong Kong</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="js/ticker.js"></script>
+<script src="js/jquery.js"></script>
+<link rel="stylesheet" href="js/mobile.css">
+<script src="js/mobile.js"></script>
+<script src="js/page.js"></script>
+<link rel="stylesheet" href="js/frame.css">
 </head>
 <body>
-
-<div data-role="page" id="testpage">
-
-	<div data-role="header">
-		<h1>BitMac</h1>
-    		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
-	</div>
-
-	<div class="ui-content" role="main">
-
-		<a href="#panel-push" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-mini ui-btn-icon-left ui-icon-bars">Push</a>
-        
-        <form class="ui-mini">
-			<div class="ui-field-contain" id="theme-selector">
-				<fieldset data-role="controlgroup" data-type="horizontal">
-					<label for="a">Light</label>
-					<input type="radio" name="theme" id="a" checked>
-					<label for="b">Black</label>
-					<input type="radio" name="theme" id="b">
-				</fieldset>
-			</div>
-		</form>
-
-		<p>The Era of Digital Payment!</p>
-
-	<table width="20%" id="rcorners1">
-		<tr>
-			<td colspan="2">
-				<div class="coinmarketcap-currency-widget" data-currencyid="1" data-base="HKD" data-secondary="USD"></div>
-			</td>
-		</tr>
-		<tr>
-			<td align="center"><p id="rcorners3"></p><p id="rcorners4"></p></td>
-			<td id="rcorners2"></td>
-		</tr>
-
-	</table>
-
-	</div>
-
-	<div data-role="panel" id="panel-push" data-display="push">
-		<ul data-role="listview">
-			<li data-icon="delete"><a href="#" data-rel="close">Close</a></li>
-			<li data-icon="home"><a href="about.html" data-rel="dialog" data-transition="flip">About BitMac</a></li>
-			<li data-icon="location"><a href="location.html" data-rel="dialog" data-transition="flip">Locate our Machine</a></li>
-		</ul>
-	</div>
-
-</div>
-
+<script src="js/main.js"></script>
 </body>
 </html>
