--- a/location.html
+++ b/location.html
@@ -19,7 +19,7 @@
 		<div class="ui-content" role="main">
 
 			<p>We are looking for a good location to install the Machine.</p>
-			<p>Please wait a bit (will be released on 1st April 2018).</p>
+			<p>Please wait a bit (coming soon; probably late April 2018).</p>
 			<p align="center"><font size=1>&copy; 2018 BitMac, Hong Kong.</font></p>
 
 			<a href="index.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b" data-rel="back">Take me Back</a>
