--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<table width="20%" id="rcorners1">
 		<tr>
 			<td colspan="2">
-				<iframe src="https://coinlib.io/widget?type=single&theme=light&coin_id=859&pref_coin_id=1527" width="250" height="150" scrolling="auto" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe>
+				<iframe src="https://coinlib.io/widget?type=single&theme=light&coin_id=859&pref_coin_id=1527" width="250" height="150" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe>
 			</td>
 		</tr>
 		<tr>
