--- a/index.html
+++ b/index.html
@@ -1,66 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>BitMac, Hong Kong</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="js/jquery.js"></script>
-	<link rel="stylesheet" href="js/mobile.css">
-	<script src="js/mobile.js"></script>
-	<script src="js/page.js"></script>
-	<link rel="stylesheet" href="js/frame.css">
-</head>
-<body>
+	<head>
+		<script src="js/head.js"></script>
+	</head>
 
-<div data-role="page" id="testpage">
-
-	<div data-role="header">
-		<h1>BitMac</h1>
-    		<a href="#" data-rel="back" class="ui-btn ui-corner-all ui-shadow ui-icon-back ui-btn-icon-left ui-btn-icon-notext">Back</a>
-	</div>
-
-	<div class="ui-content" role="main">
-
-		<a href="#panel-push" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-mini ui-btn-icon-left ui-icon-bars">Push</a>
-        
-        <form class="ui-mini">
-			<div class="ui-field-contain" id="theme-selector">
-				<fieldset data-role="controlgroup" data-type="horizontal">
-					<label for="a">Light</label>
-					<input type="radio" name="theme" id="a" checked>
-					<label for="b">Black</label>
-					<input type="radio" name="theme" id="b">
-				</fieldset>
-			</div>
-		</form>
-
-		<p>The Era of Digital Payment!</p>
-
-	<table width="20%" id="rcorners1">
-		<tr>
-			<td colspan="2"><p id="rcorners5"><iframe src="https://coinlib.io/widget?type=single&theme=light&coin_id=859&pref_coin_id=1527" width="250" height="150" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" border="0" style="border:0;margin:0;padding:0;"></iframe></p></td>
-		</tr>
-		<tr>
-			<td align="center"><p id="rcorners3"></p><p id="rcorners4"></p></td>
-			<td id="rcorners2"></td>
-		</tr>
-
-	</table>
-
-
-
-
-	</div>
-
-	<div data-role="panel" id="panel-push" data-display="push">
-		<ul data-role="listview">
-			<li data-icon="delete"><a href="#" data-rel="close">Close</a></li>
-			<li data-icon="home"><a href="about.html" data-rel="dialog" data-transition="flip">About BitMac</a></li>
-			<li data-icon="location"><a href="location.html" data-rel="dialog" data-transition="flip">Locate our Machine</a></li>
-		</ul>
-	</div>
-
-</div>
-
-</body>
+	<body>
+		<script src="js/body.js"></script>
+	</body>
 </html>
