--- a/location.html
+++ b/location.html
@@ -18,8 +18,8 @@
 
 		<div class="ui-content" role="main">
 
-			<p>We are looking for a good location to install the Machine.</p>
-			<p>Please wait a bit (coming soon; in May 2018).</p>
+			<p>We have found a good location to install the Machine; cheers!</p>
+			<p>Currently, the address is - shop no.160 on 2/F of Kam Wah Mansion, Metro Sham Shui, 226-242 Cheung Sha Wan Road, Shamshuipo, Kowloon, Hong Kong.</p>
 			<p align="center"><font size=1>&copy; 2018 BitMac, Hong Kong.</font></p>
 
 			<a href="index.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b" data-rel="back">Take me Back</a>
