--- a/location.html
+++ b/location.html
@@ -19,8 +19,9 @@
 		<div class="ui-content" role="main">
 
 			<p>We have found a good location to install the Machine; cheers!</p>
-			<p>Currently, the address is - shop no.160 on 2/F of Kam Wah Mansion, Metro Sham Shui, 226-242 Cheung Sha Wan Road, Shamshuipo, Kowloon.</p>
-			<p>p.s. we are working on a permanent site @ Hong Kong island (preparation stage; opening soon) recently, welcome all, the address is - shop no.31, digital zone of Maxibase, Block 1-3, City Garden, 233 Electric Road, North Point, Hong Kong.</p>
+			<p>Currently, operating @ unit 31 Maxibase; 5-min walking distance from Fortress Hill MTR station; or if you walk from North Point station, takes around 10min.</p>
+			<p>- shop no. 31, digital zone of Maxibase, Block 1-3, City Garden, 233 Electric Road, North Point, Hong Kong.</p>
+			<p>- shop no.160 on 2/F of Kam Wah Mansion, Metro Sham Shui, 226-242 Cheung Sha Wan Road, Sham Shui Po, Kowloon.</p>
 			<p align="center"><font size=1>&copy; 2018 BitMac, Hong Kong.</font></p>
 
 			<a href="index.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b" data-rel="back">Take me Back</a>
