--- a/note.html
+++ b/note.html
@@ -18,8 +18,8 @@
 
 		<div class="ui-content" role="main">
 			
-			<p>We have installed another vending machine in our spot for souvenir items (i.e., physical bitcoin). As our community is served for cryptors, like us; we are not running this for profit; all the income from our physical spot is just for covering its operation cost.</p>
-			<p>For the matter of speculation, we don't encourage anyone participating (probably spend your coins/holdings; disclose your personal info, i.e., ID/passport no.) in any ICO event recently; be knowledgeable; don't risk your BTC.</p>
+			<p>We have delivered a capsule machine to our spot as well, for souvenir items (i.e., physical bitcoin). As our community is served for cryptors, like us; we are not running this for profit; all the income from our physical spot is just for covering its operational cost.</p>
+			<p>For the matter of speculation, we don't encourage anyone participating (probably spend your coins/holdings; disclose your personal info, i.e., ID/passport no.) in any ICO event recently; and beware of the pyramid scheme/so called AI trading bot/ridiculously high interest rate programme; be knowledgeable; don't risk your BTC.</p>
 			<p align="center"><font size=1>&copy; 2018 BitMac, Hong Kong.</font></p>
 
 			<a href="index.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b" data-rel="back">Take me Back</a>
