--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="apple-touch-icon" href="iphone.png" />
+		<link rel="apple-touch-icon" href="ipad.png" />
 		<script src="js/head.js"></script>
 	</head>
 
