--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="apple-touch-icon" href="ipad.png" />
+		<link rel="apple-touch-icon" href="logo.png"/>
+		<link rel="icon" type="image/png" href="logo.png"/>
+		<link rel="shortcut icon" href="logo.png"/>
+		<link rel="mask-icon" href="logo.png"/>
 		<script src="js/head.js"></script>
 	</head>
 
