--- a/location.html
+++ b/location.html
@@ -20,7 +20,7 @@
 
 			<p>We have found a good location to install the Machine; cheers!</p>
 			<p>Currently, operating @ unit 31 Maxibase; 5-min walking distance from Fortress Hill MTR station; or if you walk from North Point station, takes around 10min.</p>
-			<p>Site: shop no. 31, digital zone of Maxibase (basement mall), Block 1-3, City Garden, 233 Electric Road, North Point, Hong Kong.</p>
+			<p>Site: shop no. 31, digital zone of Maxibase (basement level), Block 1-3, City Garden, 233 Electric Road, North Point, Hong Kong.</p>
 			<p align="center"><font size=1>&copy; 2018 BitMac, Hong Kong.</font></p>
 
 			<a href="index.html" class="ui-btn ui-corner-all ui-shadow ui-btn-b" data-rel="back">Take me Back</a>
