--- a/en/test.html
+++ b/en/test.html
@@ -1,4 +1,5 @@
-<script type="text/javascript" src="coin.js"></script>
+<!-- <script type="text/javascript" src="coin.js"></script> -->
+<script src="../js/ticker.js"></script>
 
 <div class="coinmarketcap-currency-widget" data-currencyid="1" data-base="HKD" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
 <div class="coinmarketcap-currency-widget" data-currencyid="1027" data-base="HKD" data-secondary="USD" data-ticker="true" data-rank="true" data-marketcap="true" data-volume="true" data-stats="USD" data-statsticker="true"></div>
