--- a/en/index.html
+++ b/en/index.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<link rel="apple-touch-icon" href="../logo.png"/>
+	<link rel="icon" type="image/png" href="../logo.png"/>
+	<link rel="shortcut icon" href="../logo.png"/>
+	<link rel="mask-icon" href="../logo.png"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>BitMac HK</title>
+	<title>BitMac, Hong Kong</title>
 	<script src="../js/ticker.js"></script>
 	<script src="../js/jquery.js"></script>
 	<link rel="stylesheet" href="../js/jquery.mobile.css">
@@ -46,12 +50,13 @@
 			</div>
 	</form>
 
-		<p>The Era of Digital Cash!</p>
+<!-- 		<p>The Era of Digital Cash!</p> -->
 
 	<table width="20%">
 		<tr>
 			<td>
-				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD"></div>
+<!-- 				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD"></div> -->
+				<div class="coinmarketcap-currency-widget" data-currencyid="1" data-base="HKD" data-secondary="USD"></div>
 			</td>
 		</tr>
 	</table>
