--- a/en/index.html
+++ b/en/index.html
@@ -52,7 +52,7 @@
 
 <!-- 		<p>The Era of Digital Cash!</p> -->
 
-	<table width="20%">
+	<table width="20%" align="center">
 		<tr>
 			<td>
 <!-- 				<div class="coinmarketcap-currency-widget" data-currencyid="131" data-base="HKD" data-secondary="USD"></div> -->
